--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-content center-stage" [ngClass]="{'hide': !(headerState.state === HEADER_STATE.Fixed)}">
   <div class="overview-wrapper">
-    <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200>
+    <div class="overview art-overview below-view" [class.above-view]="steps[1].isAboveView" [class.below-view]="steps[1].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200>
       <div class="dp overview-dp">
         <h2>Art</h2>
         <div class="alpha-initial-bg">A</div>
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
+    <div class="overview projects-overview below-view" [class.above-view]="steps[2].isAboveView" [class.below-view]="steps[2].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 >
       <div class="dp overview-dp">
         <h2>Projects</h2>
         <div class="alpha-initial-bg">P</div>
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
+    <div class="overview blog-overview below-view" [class.above-view]="steps[3].isAboveView" [class.below-view]="steps[3].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 >
       <div class="dp overview-dp">
         <h2>Blog</h2>
         <div class="alpha-initial-bg">B</div>
@@ -51,7 +51,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
+    <div class="overview about-overview below-view" [class.above-view]="steps[4].isAboveView" [class.below-view]="steps[4].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 >
       <div class="dp overview-dp">
         <h2>About</h2>
         <div class="alpha-initial-bg">A</div>
@@ -68,7 +68,7 @@
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 [checkAboveView]=false>
+    <div class="overview contact-overview below-view" [class.above-view]="steps[5].isAboveView" [class.below-view]="steps[5].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 [checkAboveView]=false>
       <div class="dp overview-dp">
         <h2>Contact</h2>
         <div class="alpha-initial-bg">C</div>
