--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(16, 16, 16, 0.9);
+    background: #000;
     z-index: 10;
     opacity: 0;
     transition: opacity 0.5s;
@@ -14,13 +14,9 @@
     opacity: 1;
 }
 
-.current-image {
-    position: relative;
-    height: 100%;
-}
 .image-container {
+    position: relative;
     text-align: center;
-    padding: 3em;
     height: 100%;
 }
 
@@ -28,28 +24,32 @@
     height: 100%;
 }
 
-.top-icons {
+.icon-wrapper {
     position: fixed;
     top: 0;
     margin: 0.25em;
     font-size: 2em;
     color: #FFFFFF;
-    opacity: 0.7;
     cursor: pointer;
     -webkit-transition: opacity 0.5s;
     transition: opacity 0.5s;
+    opacity: 0.7;
+    outline: none;
+    z-index: 10;
 }
 
-.top-icons:hover {
+.icon-wrapper:hover {
     opacity: 1;
 }
 
 .info-button {
     left: 0;
+    margin: 0.5em;
 }
 
 .close-button {
-    right: 0
+    right: 0;
+    font-size: 3em;
 }
 
 .image-list-wrapper {
@@ -103,7 +103,15 @@
 
 .image-wrapper {
     height: 100%;
-    width: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: 0;
+    transition: margin-left 0.5s;
+}
+
+.image-wrapper.with-info {
+    margin-left: 300px
 }
 
 .image-container .loading-icon {
@@ -113,15 +121,23 @@
 }
 
 .image-info-panel {
-    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100%;
-    width: 20vw;
-    margin-left: -5px;
+    width: 300px;
     background: #333333;
     vertical-align: top;
-    padding: 20px;
-    color: #FFFFFF;   
+    padding: 70px 20px;
+    color: #FFFFFF;
     text-align: left;
+    z-index: 2;
+    transform: translateX(-300px);
+    transition: transform 0.5s ease-out;
+}
+
+.image-info-panel.show {
+    transform: translateX(0);
 }
 
 .image-info-panel h1 {
@@ -137,15 +153,24 @@
     font-weight: 100;
 }
 
-.current-image .arrow-btn {
-    opacity: 0.4;
+.arrow-btn {
+    position: absolute;
+    margin: 0.5em;
 }
-.current-image .arrow-btn:hover {
-    opacity: 1;
-}
-.current-image .arrow-btn.left {
-    left: 5px;
-}
-.current-image .arrow-btn.right {
-    right: 5px;
+
+@media (max-width: 650px) {
+    .image-container img {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+    }
+
+    .image-wrapper.with-info {
+        margin-left: 0;
+    }
 }
