--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -24,7 +24,7 @@
     width: 100%;
     height: 100%;
     padding: 5px 10px 20px;
-    background: #0707078f;
+    background: rgba(7, 7, 7, 0.5);
     color: #ffff;
     font-size: 2em;
     padding: 25px;
