--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
   <router-outlet></router-outlet>
-  <section class="list-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <section class="list-wrapper" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
     <h2>Gallery</h2>
     <div class="loading-icon animate" [hidden]="!isLoading">
     </div>
