--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="home-content center-stage" [ngClass]="{'hide': !(headerState.state === HEADER_STATE.Fixed)}">
   <div class="overview-wrapper">
-    <div class="overview art-overview below-view" [class.above-view]="steps[1].isAboveView" [class.below-view]="steps[1].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200>
+    <div class="overview art-overview below-view" [class.above-view]="steps[1].isAboveView" [class.below-view]="steps[1].isBelowView"
+      appJsOnscroll [viewportCheck]=true [padding]=200>
       <div class="dp overview-dp">
         <h2>Art</h2>
         <div class="alpha-initial-bg">A</div>
@@ -11,13 +12,16 @@
         </div>
       </div>
       <div class="overview-content-wrapper">
+        <div class="overview-content-background"></div>
         <div class="overview-content">
+          A collection of my sketches and paintings
         </div>
       </div>
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview projects-overview below-view" [class.above-view]="steps[2].isAboveView" [class.below-view]="steps[2].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 >
+    <div class="overview projects-overview below-view" [class.above-view]="steps[2].isAboveView" [class.below-view]="steps[2].isBelowView"
+      appJsOnscroll [viewportCheck]=true [padding]=200>
       <div class="dp overview-dp">
         <h2>Projects</h2>
         <div class="alpha-initial-bg">P</div>
@@ -28,13 +32,16 @@
         </div>
       </div>
       <div class="overview-content-wrapper">
+        <div class="overview-content-background"></div>
         <div class="overview-content">
+          How I learn new technologies. See my hobby projects
         </div>
       </div>
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview blog-overview below-view" [class.above-view]="steps[3].isAboveView" [class.below-view]="steps[3].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 >
+    <div class="overview blog-overview below-view" [class.above-view]="steps[3].isAboveView" [class.below-view]="steps[3].isBelowView"
+      appJsOnscroll [viewportCheck]=true [padding]=200>
       <div class="dp overview-dp">
         <h2>Blog</h2>
         <div class="alpha-initial-bg">B</div>
@@ -45,13 +52,16 @@
         </div>
       </div>
       <div class="overview-content-wrapper">
+        <div class="overview-content-background"></div>
         <div class="overview-content">
+          My thoughts on technology and life. See my blog posts
         </div>
       </div>
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview about-overview below-view" [class.above-view]="steps[4].isAboveView" [class.below-view]="steps[4].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 >
+    <div class="overview about-overview below-view" [class.above-view]="steps[4].isAboveView" [class.below-view]="steps[4].isBelowView"
+      appJsOnscroll [viewportCheck]=true [padding]=200>
       <div class="dp overview-dp">
         <h2>About</h2>
         <div class="alpha-initial-bg">A</div>
@@ -62,13 +72,17 @@
         </div>
       </div>
       <div class="overview-content-wrapper">
+        <div class="overview-content-background"></div>
         <div class="overview-content">
+          I am artist, developer and wanna be ....
+          Learn more about me
         </div>
       </div>
     </div>
   </div>
   <div class="overview-wrapper">
-    <div class="overview contact-overview below-view" [class.above-view]="steps[5].isAboveView" [class.below-view]="steps[5].isBelowView" appJsOnscroll [viewportCheck]=true [padding]=200 [checkAboveView]=false>
+    <div class="overview contact-overview below-view" [class.above-view]="steps[5].isAboveView" [class.below-view]="steps[5].isBelowView"
+      appJsOnscroll [viewportCheck]=true [padding]=200 [checkAboveView]=false>
       <div class="dp overview-dp">
         <h2>Contact</h2>
         <div class="alpha-initial-bg">C</div>
@@ -79,7 +93,9 @@
         </div>
       </div>
       <div class="overview-content-wrapper">
+        <div class="overview-content-background"></div>
         <div class="overview-content">
+          Interested to work with me. Contact me
         </div>
       </div>
     </div>
