Style Updates and Fixes

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,8 +2,13 @@
   <h1>Blog</h1>
   <div class="content-wrapper view-check below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <div class="main">
-      <h2>My blogs will appear here</h2>
+      <h2>My blogs posts</h2>
       <i class="icon-ios-chatboxes"></i>
+    </div>
+    <div class="blog-card featured-blog">
+      <div class="title">
+        <h3>Coming soon..</h3>
+      </div>
     </div>
   </div>
 </div>
