--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -43,6 +43,11 @@
     align-items: center;
 }
 
+.title h3 {
+    margin: 0;
+    font-weight: normal;
+}
+
 .github-link {
     text-decoration: none;
     color: inherit;
