--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="project featured-project">
       <div class="title">
-        <span>My Portfolio</span>
+        <h3>My Portfolio</h3>
         <a class="github-link" href="https://github.com/Jayabratha/my-portfolio"><i class="icon-social-github"></i></a>
       </div>
       <div class="desc">This project is my personal portfolio showcaseing my art works, projects and blog</div>
@@ -38,7 +38,7 @@
       <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
         [checkAboveView]=false>
         <div class="title">
-          <span>MEAN Demo App</span>
+          <h3>MEAN Demo App</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-demo-app"><i class="icon-social-github"></i></a>
         </div>
         <div class="desc">This project is my first full-stack app using MEAN (MongoDB, ExpressJS, AngularJS, NodeJS)
@@ -71,7 +71,7 @@
       <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
         [checkAboveView]=false>
         <div class="title">
-          <span>Material Demo App</span>
+          <h3>Material Demo App</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-mat-demo"><i class="icon-social-github"></i></a>
         </div>
         <div class="desc">This project is developed using Angular Material where design is the main focus using custom
