Cloud functions updates and fixes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,7 +48,7 @@
         <div class="underline"></div>
         <div class="button-wrapper">
           <div class="background"></div>
-          <button>GO TO BLOG</button>
+          <button routerLink="/blog">GO TO BLOG</button>
         </div>
       </div>
       <div class="overview-content-wrapper">
