--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -5,7 +5,7 @@
             <div class="menu-icon"></div>
             <div class="menu-icon-bottom"></div>
         </div>
-        <div class="logo-section" routerLink="/home" (click)="showMenu = false;">
+        <div class="logo-section" (click)="goToHome()">
             <i class="icon-logo-svg"></i>
         </div>
         <div class="search-wrapper" (clickedOut)="hideSearch($event)">
