--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     background: #fff;
-    height: 38em;
+    min-height: 38em;
     box-shadow: 0 2px 20px rgba(0,0,0,.1);
     transition: height 0.5s ease-out;
 }
